# MyPictures

./: .gitignore  CLAUDE.md  README.md  app.py  config.py  indexer.py  migrate_embedding_dim.py  pyproject.toml  search.py  setup_db.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
